--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,20 @@
 {
-  "name": "Jeevan Chetna Foundation",
   "short_name": "Jeevan Chetna",
-  "description": "Jeevan Chetna Foundation | Empowering Communities",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#22c55e",
+  "name": "Jeevan Chetna Foundation",
   "icons": [
     {
-      "src": "/favicon.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/jeevanchetna-logo.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
-      "src": "/favicon.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/jeevanchetna-logo.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
-  ]
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#14b8a6",
+  "background_color": "#ffffff"
 }
